--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^5.10.16",
     "node": "^15.4.0",
     "nodemon": "^2.0.7",
+    "serve": "^11.3.2",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
   },
