--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.16",
     "node": "^15.4.0",
+    "nodemailer": "^6.4.18",
     "nodemon": "^2.0.7",
-    "serve": "^11.3.2",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
   },
