--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT= 3001
 EMAIL_LOGIN= evernotche@gmail.com
 EMAIL_PASSWORD= senhaevernotcheapp
 FRONT_ORIGIN= https://evernotche.vercel.app
+SENDGRID_API_KEY= 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
