--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^5.10.16",
     "node": "^15.4.0",
     "nodemailer": "^6.4.18",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
