--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT= 3001
 EMAIL_LOGIN= evernotche@gmail.com
 EMAIL_PASSWORD= senhaevernotcheapp
 FRONT_ORIGIN= https://evernotche.vercel.app
-SENDGRID_API_KEY= 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
+SENDGRID_API_KEY= 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
